Fixed backside project card buttons on smaller screens

--- a/sass/_queries.scss
+++ b/sass/_queries.scss
@@ -409,6 +409,16 @@
 
     }
 
+    .card {
+        &__text-box {
+            margin-bottom: 4rem;
+        }
+
+        &-btn {
+            margin: .75rem 1rem;
+        }
+    }
+
     .skills {
         clip-path: none;
 
